--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -8,7 +8,7 @@ ribbon:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://discovery:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
   instance:
     preferIpAddress: true
 
