--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -1,6 +1,6 @@
 ribbon:
   eureka:
-    enabled: false
+    enabled: true
 
 eureka:
   client:
@@ -18,7 +18,6 @@ zuul:
   debug:
     request: true
     response: true
-
 
 logging:
     level:
