--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -9,7 +9,15 @@ eureka:
   instance:
     preferIpAddress: true
 
-
+zuul:
+  routes:
+    product-command-side:
+      path: /commands/**
+    product-query-side:
+      path: /queries/**
+  debug:
+    request: true
+    response: true
 
 logging:
     level:
